tests/functional/lang/parse-fail-regression-20060610.err.exp
error: undefined variable 'gcc'
       at «stdin»:9:13:
            8|   body = ({
            9|     inherit gcc;
             |             ^
           10|   }).gcc;
